--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -7,7 +7,9 @@
     "lib": ["dom", "dom.iterable", "esnext"],
     "noEmit": false,
     "declaration": true,
-    "outDir": "./dist"
+    "declarationDir": "dist/types",
+    "outDir": "./dist",
+    "allowSyntheticDefaultImports": true,
   },
   "include": ["src"],
   "exclude": ["node_modules", "dist"]
